AI-124: Fix contact record notes tab - table with pagination issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_manage-groups.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_manage-groups.scss
@@ -280,7 +280,7 @@
     }
 
     .crm-datatable-pager-bottom {
-      background: $gray-lighter;
+      background: $crm-gray-lightest;
       border-radius: 0 0 $border-radius-child $border-radius-child;
       line-height: 1.8em;
       padding-bottom: 39px;
