--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
@@ -413,9 +413,9 @@
       }
 
       .crm-datatable-pager-bottom {
-        background: $gray-lighter;
+        background: $crm-gray-lightest;
         border-radius: 0 0 $border-radius-child $border-radius-child;
-        line-height: 25px;
+        line-height: 1.8em;
         padding-bottom: 39px;
         padding-top: 10px;
 
