--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_view-contact.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_view-contact.scss
@@ -8,12 +8,23 @@
         margin-left: 0 !important;
       }
 
-      td.section-shown .crm-accordion-wrapper{
+      td.section-shown .crm-accordion-wrapper {
+        border-radius: $panel-border-radius;
         box-shadow: $box-shadow;
         margin: 15px 0;
 
+        &.collapsed .crm-accordion-header {
+          border-bottom: none;
+          border-radius: $panel-border-radius !important;
+        }
+
         .crm-accordion-header {
           border-bottom: 1px solid $crm-dark-grayblue;
+          border-radius: $panel-border-radius $panel-border-radius 0 0 !important;
+        }
+
+        .crm-accordion-body {
+          border-radius: 0 0 $panel-border-radius $panel-border-radius !important;
         }
 
         .crm-accordion-body .crm-submit-buttons {
@@ -23,18 +34,18 @@
 
           .crm-hover-button {
             background: $brand-primary;
+            border-radius: $border-radius-base;
             color: $crm-white;
-            border-radius: 2px;
-            padding: 5px 12px;
             line-height: 1.5em;
+            padding: 5px 12px;            
 
             &.crm-custom-value-del {
-               background-color: $brand-danger;
+              background-color: $brand-danger;
             }
 
             i {
-              position: relative;
               bottom: 2px;
+              position: relative;              
             }
           }
         }
@@ -49,11 +60,13 @@
         }
 
         table.crm-info-panel td {
+          color: $crm-copy;
           vertical-align: middle;
         }
 
         table.crm-info-panel td.label {
-          font-weight: 400;
+          color: $gray-darker;
+          font-weight: $crm-font-weight-h1;
         }
 
         table.crm-info-panel td.html-adjust {
