AI-89: Fix title semibold issue in change log tab

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_change-log.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_change-log.scss
@@ -6,12 +6,12 @@
     border-top-right-radius: $panel-border-radius;
     box-shadow: $box-shadow;
     color: $gray-darker;
-    font: $headings-font-weight $font-size-h2 $font-family-base;
+    font: $crm-font-weight-h1 $font-size-h2 $font-family-base;
     padding: 13px 20px;
   }
 
   > p {
-      margin: 0;
+    margin: 0;
   }
 
   .form-item {
