--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -285,7 +285,7 @@
                 uploader="$ctrl.request.fileUploader"
                 class="chr_leave-request-files_upload"
                 ng-disabled="$ctrl.isMode('view')"
-                ng-if="$ctrl.request.fileUploader">
+                ng-if="$ctrl.request.fileUploader && $ctrl.request.canUploadMore()">
                 <div class="chr_leave-request-files_upload_action row text-center">
                   Drag and drop file here
                 </div>
@@ -302,6 +302,14 @@
                       uploader="$ctrl.request.fileUploader"
                       style="display:none;">
                   </label>
+                </div>
+              </div>
+              <div ng-if="!$ctrl.request.canUploadMore()" class="chr_leave-request-files_upload">
+                <div class="chr_leave-request-files_upload_action row text-center">
+                  You can upload upto 10 files.
+                </div>
+                <div class="chr_leave-request-files_upload_action row text-center">
+                  The supported file extensions are txt, jpg, png, jpeg, bmp, gif, pdf, doc, docx, xls, xlsx, ppt, pptx.
                 </div>
               </div>
             </uib-tab>
