--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-price-set.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-price-set.scss
@@ -60,6 +60,7 @@
     }
    
     #field_page, #option11_wrapper {
+      margin-bottom: 0 !important;
       position: relative;
 
       &:before{
