--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_relationships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_relationships.scss
@@ -25,7 +25,7 @@
 
     .dataTables_wrapper {
       border-radius: $border-radius-child;
-      box-shadow: $crm-form-item-shadow;
+      box-shadow: $box-shadow;
       margin: 20px 0;
 
       table {
@@ -122,7 +122,7 @@
           border: none;
           color: $gray-dark;
           line-height: 1.1em;
-          max-width: 92px;
+          max-width: 87px;
           min-width: 76px;
           padding: 15px 20px;
           vertical-align: middle;
@@ -145,12 +145,13 @@
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
-            width: 80%;
+            width: 76%;
           }
 
           &:nth-child(3),
           &:nth-child(4) {
             max-width: 130px;
+            min-width: 130px;
           }
 
           &:last-child {
